--- a/ionic_1x/caffeinehit-list/www/index.html
+++ b/ionic_1x/caffeinehit-list/www/index.html
@@ -16,16 +16,17 @@
 	-->
 
 	<!-- ionic/angularjs js -->
-	<script src="lib/ionic/js/ionic.bundle.js" ></script >
+	<script src="lib/ionic/js/ionic.bundle.js" ></script>
 
+	<script src="lib/ngCordova/dist/ng-cordova.js"></script>
 	<!-- cordova script (this will be a 404 during development) -->
-	<script src="cordova.js" ></script >
+	<script src="cordova.js" ></script>
 
 	<!-- your apps js -->
-	<script src="js/app.js" ></script >
-	<script src="js/controllers.js" ></script >
-	<script src="js/services.js" ></script >
-	<script src="js/filters.js" ></script >
+	<script src="js/app.js" ></script>
+	<script src="js/controllers.js" ></script>
+	<script src="js/services.js" ></script>
+	<script src="js/filters.js" ></script>
 </head >
 <body ng-app="caffeinehit" >
 
@@ -37,9 +38,15 @@
 		</h1 >
 	</ion-header-bar >
 	<ion-content >
-		<ion-list >
+		<ion-refresher
+			pulling-text="Refreshing..."
+			on-refresh="doRefresh()" >
+		</ion-refresher>
+
+		<ion-list can-swipe="true">
 			<ion-item ng-repeat="cafe in yelp.results"
-			          class="item-thumbnail-left" >
+			          class="item-thumbnail-left"
+								ng-click="openMap(cafe)">
 				<img ng-src="{{cafe.image_url}}" >
 				<h2 >{{cafe.name}}</h2 >
 
@@ -60,8 +67,17 @@
 						<i class="ion ion-person" ></i >
 						{{cafe.review_count}}</span >
 				</p >
+				<ion-option-button class="button-positive"
+					ng-click="getDirections(cafe)">
+					<i class="ion ion-map"></i>&nbsp;Directions
+				</ion-option-button>
 			</ion-item >
 		</ion-list >
+		<ion-infinite-scroll
+			ng-if="yelp.hasMore"
+			on-infinite="loadMore()"
+			immediate-check="false"
+			></ion-infinite-scroll>
 	</ion-content >
 </ion-pane >
 </body >
