--- a/ionic_1x/caffeinehit-map/www/index.html
+++ b/ionic_1x/caffeinehit-map/www/index.html
@@ -6,14 +6,11 @@
 	      content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width" >
 	<title ></title >
 
-	<link href="lib/ionic/css/ionic.css"
 	      rel="stylesheet" >
-	<link href="css/style.css"
 	      rel="stylesheet" >
 
-	<!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+    <!-- compiled css output -->
 	<link href="css/ionic.app.css" rel="stylesheet">
-	-->
 
 	<!-- ionic/angularjs js -->
 	<script src="lib/ionic/js/ionic.bundle.js" ></script >
@@ -22,7 +19,7 @@
 	<script src="lib/ngCordova/dist/ng-cordova.js" ></script >
 	<script src="cordova.js" ></script >
 
-	<!-- your app's js -->
+	<!-- your apps js -->
 	<script src="js/app.js" ></script >
 	<script src="js/controllers.js" ></script >
 	<script src="js/services.js" ></script >
