--- a/ionic_1x/caffeinehit-map/www/index.html
+++ b/ionic_1x/caffeinehit-map/www/index.html
@@ -14,6 +14,8 @@
 
 	<!-- ionic/angularjs js -->
 	<script src="lib/ionic/js/ionic.bundle.js" ></script >
+	<script src="https://maps.google.com/maps/api/js"></script>
+	<script src="lib/ngmap/build/scripts/ng-map.min.js"></script>
 
 	<!-- cordova script (this will be a 404 during development) -->
 	<script src="lib/ngCordova/dist/ng-cordova.js" ></script >
@@ -28,59 +30,70 @@
 <body ng-app="caffeinehit" >
 
 <ion-pane ng-controller="YelpController" >
-	<ion-header-bar class="bar-dark" >
+	<ion-header-bar class="bar-assertive" >
 		<h1 class="title" >
 			<img src='img/coffee-bean-icon.png' />
 			<span >CaffeineHit</span >
 		</h1 >
 	</ion-header-bar >
-	<ion-content scroll="false" >
+	<ion-content
+		scroll="false" >
+		<map
+			center="{{yelp.lat}}, {{yelp.lon}}"
+			zoom="12" disable-default-u-i="false">
+			<marker
+				position="{{[yelp.lat, yelp.lon]}}"
+				icon="img/me-marker.png">
+			</marker>
 
+			<marker
+				clickable="true"
+				on-mousedown="showCafeDetail(event, cafe)"
+				ng-repeat="cafe in yelp.results"
+				icon="img/coffee-marker.png"
+				position="{{[cafe.location.coordinate.latitude, cafe.location.coordinate.longitude]}}">
+			</marker>
 
+			<info-window
+					id="marker-info" >
+				<div ng-non-bindable="" >
+					<div class="contents" >
+						<img ng-src="{{yelp.cafe.image_url}}"
+						     alt="" />
+						<h4 >{{yelp.cafe.name}}</h4 >
+
+						<p >{{yelp.cafe.snippet_text}}</p >
+
+						<div class="row" >
+							<div class="col" >
+								<p class="address" >
+									<i class="ion ion-ios-location" ></i >
+									{{yelp.cafe.location.display_address | join:", "}}
+								</p >
+							</div >
+							<div class="col" >
+								<p class="distance" >
+									<i class="ion ion-ios-navigate" ></i >
+									{{yelp.cafe.distance | number:"0"}}m
+								</p >
+								<p class="rating" >
+									<i class="ion ion-star" ></i >
+									{{yelp.cafe.rating}}
+									&nbsp;
+									<i class="ion ion-person" ></i >
+									{{yelp.cafe.review_count}}
+								</p >
+							</div >
+						</div >
+
+						<div class="button button-small button-assertive"
+								ng-click="getDirections(yelp.cafe)">Get Directions</div >
+					</div >
+				</div >
+			</info-window >
+
+		</map>
 	</ion-content >
 </ion-pane >
 </body >
 </html >
-
-<!--
-
-Template for the InfoWindow component
-
-<info-window
-		id="marker-info" >
-	<div ng-non-bindable="" >
-		<div class="contents" >
-			<img ng-src="{{yelp.cafe.image_url}}"
-			     alt="" />
-			<h4 >{{yelp.cafe.name}}</h4 >
-
-			<p >{{yelp.cafe.snippet_text}}</p >
-
-			<div class="row" >
-				<div class="col" >
-					<p class="address" >
-						<i class="ion ion-ios-location" ></i >
-						{{yelp.cafe.location.display_address | join:", "}}
-					</p >
-				</div >
-				<div class="col" >
-					<p class="distance" >
-						<i class="ion ion-ios-navigate" ></i >
-						{{yelp.cafe.distance | number:"0"}}m
-					</p >
-					<p class="rating" >
-						<i class="ion ion-star" ></i >
-						{{yelp.cafe.rating}}
-						&nbsp;
-						<i class="ion ion-person" ></i >
-						{{yelp.cafe.review_count}}
-					</p >
-				</div >
-			</div >
-
-			<div class="button button-small button-assertive"
-					ng-click="openDirections(yelp.cafe)">Get Directions</div >
-		</div >
-	</div >
-</info-window >
--->
