--- a/nodejs/node-chat-app/public/index.html
+++ b/nodejs/node-chat-app/public/index.html
@@ -8,14 +8,6 @@
      Welcome to Chat app
   </p>
   <script src="/socket.io/socket.io.js"></script>
-  <script>
-    var socket = io();
-    socket.on('connect', () => {
-      console.log('Connected to server');
-    })
-    socket.on('disconnect', () => {
-      console.log('Disconnected from server');
-    })
-  </script>
+  <script src="/js/index.js"></script>
 </body>
 </html>
